    -----------------------------------------------------------
This file should be used  to briefly summarize all major modifications 
introduced in the code and keeptrack of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

29-Jan-2014, Gunter Folger              (phys-ctor-hinelastic-V09-06-21)
- Removed from photolepton_hadron/muon_nuclear from sources.cmake

14-Nov-2013, Alberto Ribon              (phys-ctor-hinelastic-V09-06-20)
- Use G4NeutronInelasticXS for neutrons in the following physics lists
  (besides QBBC and FTFP_BERT_TRV which already use it):
  FTFP_BERT, FTF_BIC, QGSP_FTFP_BERT, QGSP_BERT, QGSP_BIC, QGS_BIC.

08-Nov-2013, Alberto Ribon              (phys-ctor-hinelastic-V09-06-19)
- Removed low_energy and added fission to sources.cmake and GNUmakefile.

07-Nov-2013, Alberto Ribon              (phys-ctor-hinelastic-V09-06-18)
- Removed low_energy and high_energy from sources.cmake and GNUmakefile.

24-Sep-2013, Davide Mancusi             (phys-ctor-hinelastic-V09-06-17)
- Fix a possible null-pointer dereference in HadronPhysicsINCLXX.

22-Jul-2013, Alberto Ribon              (phys-ctor-hinelastic-V09-06-16)
- Nothing is changed: simply re-propose the previous tag after
  fixing an initialization problem in materials category.

19-Jul-2013, Alberto Ribon		(phys-ctor-hinelastic-V09-06-15)
- Replaced LEP neutron capture (Gheisha cross section and G4LCapture model)
  with G4NeutronCaptureXS (cross section) and G4NeutronRadCapture (model)
  in all physics lists.
- Removed LEP fission (Gheisha cross section and G4LFission model) in
  all physics lists which do not make use of neutron_HP.
  For the HP-based physics lists, used LEP fission only above 19.9 MeV.

18-Jun-2013, Alberto Ribon		(phys-ctor-hinelastic-V09-06-14)
- Re-enable quasiElastic in the signature of the constructors