@@ -141,30 +141,31 @@ void G4HadronPhysicsFTF_BIC::CreateModels()
 
 G4HadronPhysicsFTF_BIC::~G4HadronPhysicsFTF_BIC() 
 {
-   delete tpdata->theFTFBinaryNeutron;
-   delete tpdata->theBinaryNeutron;
-   delete tpdata->theNeutrons;
-
-   delete tpdata->theFTFBinaryPro;
-   delete tpdata->theBinaryPro;
-   delete tpdata->thePro;
-
-   delete tpdata->theFTFBinaryPion;
-   delete tpdata->theBICPion;
-   delete tpdata->thePion;
-
-   delete tpdata->theFTFBinaryKaon;
-   delete tpdata->theBertiniKaon;
-   delete tpdata->theKaon;
-
-   delete tpdata->theHyperon;
-   delete tpdata->theAntiBaryon;
-   delete tpdata->theFTFPAntiBaryon;
-
-   delete tpdata->xsNeutronInelasticXS;
-   delete tpdata->xsNeutronCaptureXS; 
-
-   delete tpdata; tpdata = 0;
+  if (tpdata) {
+    delete tpdata->theFTFBinaryNeutron;
+    delete tpdata->theBinaryNeutron;
+    delete tpdata->theNeutrons;
+    
+    delete tpdata->theFTFBinaryPro;
+    delete tpdata->theBinaryPro;
+    delete tpdata->thePro;
+    
+    delete tpdata->theFTFBinaryPion;
+    delete tpdata->theBICPion;
+    delete tpdata->thePion;
+    
+    delete tpdata->theFTFBinaryKaon;
+    delete tpdata->theBertiniKaon;
+    delete tpdata->theKaon;
+    
+    delete tpdata->theHyperon;
+    delete tpdata->theAntiBaryon;
+    delete tpdata->theFTFPAntiBaryon;
+    
+    delete tpdata->xsNeutronInelasticXS;
+    delete tpdata->xsNeutronCaptureXS; 
+    delete tpdata; tpdata = 0;
+  }
 }
 
 void G4HadronPhysicsFTF_BIC::ConstructParticle()
