@@ -167,25 +167,26 @@ void G4HadronPhysicsQGSP_BERT::CreateModels()
 
 G4HadronPhysicsQGSP_BERT::~G4HadronPhysicsQGSP_BERT()
 {
-   delete tpdata->theBertiniNeutron;
-   delete tpdata->theQGSPNeutron;
-   delete tpdata->theFTFPNeutron;
-   delete tpdata->theNeutrons;
-   delete tpdata->theBertiniPiK;
-   delete tpdata->theQGSPPiK;
-   delete tpdata->theFTFPPiK;
-   delete tpdata->thePiK;
-   delete tpdata->theBertiniPro;
-   delete tpdata->theQGSPPro;
-   delete tpdata->theFTFPPro;
-   delete tpdata->thePro;
-   delete tpdata->theFTFPAntiBaryon;
-   delete tpdata->theAntiBaryon;
-   delete tpdata->theHyperon;
-   delete tpdata->xsNeutronInelasticXS;
-   delete tpdata->xsNeutronCaptureXS;
-  
-   delete tpdata; tpdata = 0;
+  if (tpdata) {
+    delete tpdata->theBertiniNeutron;
+    delete tpdata->theQGSPNeutron;
+    delete tpdata->theFTFPNeutron;
+    delete tpdata->theNeutrons;
+    delete tpdata->theBertiniPiK;
+    delete tpdata->theQGSPPiK;
+    delete tpdata->theFTFPPiK;
+    delete tpdata->thePiK;
+    delete tpdata->theBertiniPro;
+    delete tpdata->theQGSPPro;
+    delete tpdata->theFTFPPro;
+    delete tpdata->thePro;
+    delete tpdata->theFTFPAntiBaryon;
+    delete tpdata->theAntiBaryon;
+    delete tpdata->theHyperon;
+    delete tpdata->xsNeutronInelasticXS;
+    delete tpdata->xsNeutronCaptureXS;
+    delete tpdata; tpdata = 0;
+  }
 }
 
 void G4HadronPhysicsQGSP_BERT::ConstructParticle()
