@@ -165,25 +165,27 @@ void G4HadronPhysicsQGSP_BERT_HP::CreateModels()
 
 G4HadronPhysicsQGSP_BERT_HP::~G4HadronPhysicsQGSP_BERT_HP() 
 {
-   delete tpdata->theHPNeutron;
-   delete tpdata->theBertiniNeutron;
-   delete tpdata->theQGSPNeutron;
-   delete tpdata->theFTFPNeutron;
-   delete tpdata->theNeutrons;
-   delete tpdata->theBertiniPiK;
-   delete tpdata->theQGSPPiK;
-   delete tpdata->theFTFPPiK;
-   delete tpdata->thePiK;
-   delete tpdata->theBertiniPro;
-   delete tpdata->theQGSPPro;
-   delete tpdata->theFTFPPro;
-   delete tpdata->thePro;
-   delete tpdata->theFTFPAntiBaryon;
-   delete tpdata->theAntiBaryon;
-   delete tpdata->theHyperon;
-   delete tpdata->xsNeutronCaptureXS;
+  if (tpdata) {
+    delete tpdata->theHPNeutron;
+    delete tpdata->theBertiniNeutron;
+    delete tpdata->theQGSPNeutron;
+    delete tpdata->theFTFPNeutron;
+    delete tpdata->theNeutrons;
+    delete tpdata->theBertiniPiK;
+    delete tpdata->theQGSPPiK;
+    delete tpdata->theFTFPPiK;
+    delete tpdata->thePiK;
+    delete tpdata->theBertiniPro;
+    delete tpdata->theQGSPPro;
+    delete tpdata->theFTFPPro;
+    delete tpdata->thePro;
+    delete tpdata->theFTFPAntiBaryon;
+    delete tpdata->theAntiBaryon;
+    delete tpdata->theHyperon;
+    delete tpdata->xsNeutronCaptureXS;
 
-   delete tpdata; tpdata = 0;
+    delete tpdata; tpdata = 0;
+  }
 }
 
 void G4HadronPhysicsQGSP_BERT_HP::ConstructParticle()
