@@ -176,30 +176,32 @@ void G4HadronPhysicsQGS_BIC::CreateModels()
 
 G4HadronPhysicsQGS_BIC::~G4HadronPhysicsQGS_BIC() 
 {
-   delete tpdata->theBinaryNeutron;
-   delete tpdata->theQGSBinaryNeutron;
-   delete tpdata->theFTFBinaryNeutron;
-   delete tpdata->theNeutrons;
-   delete tpdata->theQGSBinaryPion;
-   delete tpdata->theFTFBinaryPion;
-   delete tpdata->theBertiniPion;
-   delete tpdata->theBinaryPion;
-   delete tpdata->thePion;
-   delete tpdata->theQGSBinaryKaon;
-   delete tpdata->theFTFBinaryKaon;
-   delete tpdata->theBertiniKaon;
-   delete tpdata->theKaon;
-   delete tpdata->theBinaryPro;
-   delete tpdata->theQGSBinaryPro;
-   delete tpdata->theFTFBinaryPro;
-   delete tpdata->thePro;
-   delete tpdata->theFTFPAntiBaryon;
-   delete tpdata->theAntiBaryon;
-   delete tpdata->theHyperon;
-   delete tpdata->xsNeutronInelasticXS;
-   delete tpdata->xsNeutronCaptureXS; 
-
-   delete tpdata; tpdata = 0;
+  if (tpdata) {
+    delete tpdata->theBinaryNeutron;
+    delete tpdata->theQGSBinaryNeutron;
+    delete tpdata->theFTFBinaryNeutron;
+    delete tpdata->theNeutrons;
+    delete tpdata->theQGSBinaryPion;
+    delete tpdata->theFTFBinaryPion;
+    delete tpdata->theBertiniPion;
+    delete tpdata->theBinaryPion;
+    delete tpdata->thePion;
+    delete tpdata->theQGSBinaryKaon;
+    delete tpdata->theFTFBinaryKaon;
+    delete tpdata->theBertiniKaon;
+    delete tpdata->theKaon;
+    delete tpdata->theBinaryPro;
+    delete tpdata->theQGSBinaryPro;
+    delete tpdata->theFTFBinaryPro;
+    delete tpdata->thePro;
+    delete tpdata->theFTFPAntiBaryon;
+    delete tpdata->theAntiBaryon;
+    delete tpdata->theHyperon;
+    delete tpdata->xsNeutronInelasticXS;
+    delete tpdata->xsNeutronCaptureXS; 
+    
+    delete tpdata; tpdata = 0;
+  }
 }
 
 void G4HadronPhysicsQGS_BIC::ConstructParticle()
